# xr-ucalib

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
app/: CMakeLists.txt  run_unified_calibration.cc
data/test_data_handheld/: config_template.json  input_config.json  output_calib_params.json
data/test_data_handheld/sensor_data/: imu0.csv  imu1.csv  mag1.csv
include/xr_ucalib/uc_cam_calib/cam_rig_calib/: cam_reproj_cost.hpp  cam_rig_calibrator.h  reproj_evaluator.h
include/xr_ucalib/uc_cam_calib/sfm_calib/: handeye_calibrator.h  reconstruction_geometry.h  sfm_calibrator.h
include/xr_ucalib/uc_common/calib_parameter/: calib_parameters.h  cam_eqdist_intrinsic.hpp  cam_intrinsic_base.h  cam_radtan_intrinsic.hpp  imu_intrinsic.h  mag_intrinsic.h
include/xr_ucalib/uc_common/config/: cam_config.h  imu_config.h  json_adapter.hpp  mag_config.h  system_config.h  target_config.h  types.h
include/xr_ucalib/uc_common/sensor_data/: apriltag_detector.h  cam_data_loader.h  fiducial_detector_base.h  imu_data_loader.h  mag_data_loader.h  sensor_data_types.h  sensor_manager.h  target_corner3d_generator.h
include/xr_ucalib/uc_common/utils/: console_silencer.h  eigen_alignment.h  enum_utils.h  timer.h
include/xr_ucalib/uc_unified_calib/calibrator/: calibration_validator.h  problem_builder.h  unified_calibrator.h
include/xr_ucalib/uc_unified_calib/cost_function/: cam_reproj_ct_cost.hpp  imu_acc_cost.hpp  imu_gyr_cost.hpp  mag_cost.hpp
include/xr_ucalib/uc_unified_calib/initializer/: i2p_extrinsic_initializer.h  imu_preintegrator.h  initializer_utils.hpp  m2p_extrinsic_initializer.h
include/xr_ucalib/uc_unified_calib/spline/: ceres_spline_helper_jet.hpp  euclidean_spline.hpp  so3_spline.hpp  spline_bundle.hpp  spline_meta.hpp  spline_utils.hpp
script/create_fiducial_target/: kalibr_create_target_pdf.py
src/uc_cam_calib/: CMakeLists.txt
src/uc_cam_calib/cam_rig_calib/: cam_rig_calibrator.cc  reproj_evaluator.cc
src/uc_cam_calib/sfm_calib/: handeye_calibrator.cc  reconstruction_geometry.cc  sfm_calibrator.cc
src/uc_common/: CMakeLists.txt
src/uc_common/calib_parameter/: calib_parameters.cc
src/uc_common/config/: system_config.cc
src/uc_common/sensor_data/: apriltag_detector.cc  cam_data_loader.cc  fiducial_detector_base.cc  imu_data_loader.cc  mag_data_loader.cc  sensor_manager.cc  target_corner3d_generator.cc
src/uc_common/utils/: console_silencer.cc  timer.cc
src/uc_unified_calib/: CMakeLists.txt
src/uc_unified_calib/calibrator/: calibration_validator.cc  problem_builder.cc  unified_calibrator.cc
src/uc_unified_calib/initializer/: i2p_extrinsic_initializer.cc  imu_preintegrator.cc  m2p_extrinsic_initializer.cc
tests/: CMakeLists.txt  main.cc
tests/uc_cam_calib/: sfm_calibrator_test.cc
tests/uc_common/: calib_parameter_test.cc  sensor_manager_test.cc  system_config_test.cc  timer_test.cc
tests/uc_unified_calib/: m2p_extrinsic_initializer_test.cc  spline_test.cc
